--- a/bag_of_words.ipynb
+++ b/bag_of_words.ipynb
@@ -52,10 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d10c2638",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and' 'document' 'first' 'is' 'one' 'second' 'the' 'third' 'this']\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
@@ -71,18 +79,51 @@
     "X = vectorizer.fit_transform(corpus)\n",
     "\n",
     "\n",
-    "print(vectorizer.get_feature_names_out())\n"
+    "feature_names= vectorizer.get_feature_names_out()\n",
+    "print(feature_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f32ce93d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dense_matrix = X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c785b412",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   and  document  first  is  one  second  the  third  this\n",
+      "0    0         1      1   1    0       0    1      0     3\n",
+      "1    0         2      0   1    0       1    1      0     1\n",
+      "2    1         0      0   1    1       0    1      1     1\n",
+      "3    0         1      1   1    0       0    1      0     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(dense_matrix, columns=feature_names)\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32ce93d",
+   "id": "8fef7101",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X.toarray()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -94,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "48349037",
    "metadata": {},
    "outputs": [],
@@ -109,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "e87a0411",
    "metadata": {},
    "outputs": [],
@@ -122,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "b861961c",
    "metadata": {},
    "outputs": [
@@ -146,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "1de65964",
    "metadata": {},
    "outputs": [],
@@ -156,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "8a3ca2a1",
    "metadata": {},
    "outputs": [
@@ -164,13 +205,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'and': 0, 'document': 0, 'first': 0, 'is': 0, 'one': 0, 'second': 0, 'the': 0, 'third': 0, 'this': 0}\n",
       "{'and': 0, 'document': 1, 'first': 1, 'is': 1, 'one': 0, 'second': 0, 'the': 1, 'third': 0, 'this': 3}\n",
-      "{'and': 0, 'document': 0, 'first': 0, 'is': 0, 'one': 0, 'second': 0, 'the': 0, 'third': 0, 'this': 0}\n",
       "{'and': 0, 'document': 2, 'first': 0, 'is': 1, 'one': 0, 'second': 1, 'the': 1, 'third': 0, 'this': 1}\n",
-      "{'and': 0, 'document': 0, 'first': 0, 'is': 0, 'one': 0, 'second': 0, 'the': 0, 'third': 0, 'this': 0}\n",
       "{'and': 1, 'document': 0, 'first': 0, 'is': 1, 'one': 1, 'second': 0, 'the': 1, 'third': 1, 'this': 1}\n",
-      "{'and': 0, 'document': 0, 'first': 0, 'is': 0, 'one': 0, 'second': 0, 'the': 0, 'third': 0, 'this': 0}\n",
       "{'and': 0, 'document': 1, 'first': 1, 'is': 1, 'one': 0, 'second': 0, 'the': 1, 'third': 0, 'this': 1}\n"
      ]
     }
@@ -179,7 +216,7 @@
     "for i in corpus:\n",
     "    txt = tocknizer(i)\n",
     "    freq = {word: 0 for word in vocab} # assigned 0 for each key.\n",
-    "    print(freq)\n",
+    "    # print(freq)\n",
     "\n",
     "    for word in txt:\n",
     "        if word in freq:\n",
@@ -191,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "872cf76f",
    "metadata": {},
    "outputs": [
@@ -236,7 +273,7 @@
        "  'this': 1}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "99a46187",
    "metadata": {},
    "outputs": [
@@ -272,6 +309,185 @@
     "print(\"\\nBag of Words Embedding:\\n\")\n",
     "print(df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "449c83ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = [\n",
+    "    'This this this  is the first document',\n",
+    "    'This document is the second document',\n",
+    "    'And this is the third one',\n",
+    "    'Is this the first document',\n",
+    "]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c4170a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def BOW(corpus):\n",
+    "\n",
+    "\n",
+    "    def tocknizer(text):\n",
+    "        return text.lower().split()\n",
+    "    \n",
+    "    vocab = []\n",
+    "    for i in corpus:\n",
+    "        vocab.extend(tocknizer(i))\n",
+    "\n",
+    "    vocab = sorted(set(vocab))  \n",
+    "    # print(\"Vocabulary:\", vocab)\n",
+    "\n",
+    "    emb = []\n",
+    "\n",
+    "\n",
+    "    for i in corpus:\n",
+    "        txt = tocknizer(i)\n",
+    "        freq = {word: 0 for word in vocab} # assigned 0 for each key.\n",
+    "        # print(freq)\n",
+    "\n",
+    "        for word in txt:\n",
+    "            # if word in freq:\n",
+    "            freq[word] += 1\n",
+    "        # print(freq)\n",
+    "\n",
+    "        emb.append(freq)\n",
+    "\n",
+    "    df = pd.DataFrame(emb)\n",
+    "    # print(\"\\nBag of Words Embedding:\\n\")\n",
+    "    # print(df)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "769b8152",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>and</th>\n",
+       "      <th>document</th>\n",
+       "      <th>first</th>\n",
+       "      <th>is</th>\n",
+       "      <th>one</th>\n",
+       "      <th>second</th>\n",
+       "      <th>the</th>\n",
+       "      <th>third</th>\n",
+       "      <th>this</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   and  document  first  is  one  second  the  third  this\n",
+       "0    0         1      1   1    0       0    1      0     3\n",
+       "1    0         2      0   1    0       1    1      0     1\n",
+       "2    1         0      0   1    1       0    1      1     1\n",
+       "3    0         1      1   1    0       0    1      0     1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BOW(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e36152",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
